--- a/demos/demo.html
+++ b/demos/demo.html
@@ -2,10 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<meta name="copyright" content="Epistemex">
-
-	<title>2D Affine Transformation Matrix demo</title>
-
+	<title>2D Affine Transformation Matrix test</title>
 	<style>
 		body {
 			background:#bbb;
