Updated demo, start your local server in root

--- a/demos/demo.html
+++ b/demos/demo.html
@@ -46,7 +46,7 @@
 
 <!-- dashboard can be downloaded from: https://github.com/epistemex/dashboard -->
 <script src="dashboard.min.js"></script>
-<script src="../matrix.min.js"></script>
+<script src="../src/matrix.js"></script>
 <script>
 
 	var dom = document.querySelector("#dom");
