--- a/demos/reflect.html
+++ b/demos/reflect.html
@@ -18,7 +18,7 @@
 		<canvas id="canvas" width="400" height="400"></canvas>
 	</div>
 
-<script src="../matrix.min.js"></script>
+<script src="../src/matrix.js"></script>
 <script>
 
 	function Ball(x, y, r, vx, vy) {
