--- a/demos/test.html
+++ b/demos/test.html
@@ -37,7 +37,7 @@
 		</footer>
 	</div> 	<!-- container -->
 
-<script src="../matrix.min.js"></script>
+<script src="../src/matrix.js"></script>
 <script>
 
 	var canvas = document.getElementById('canvas'),
